--- a/project.css
+++ b/project.css
@@ -776,7 +776,7 @@ nav a img:hover{
 .menber p {
     color: #FFF;
     font-family: "Noto Serif TC";
-    font-size: 2.5vw; /* 大約是 36px，視情況調整 */
+    font-size: 1.5vw; /* 大約是 36px，視情況調整 */
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -933,3 +933,223 @@ footer p{
     max-width: 100%;
     max-height: 100%;
   }
+
+@media screen and (max-width: 768px){
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+    
+    * {
+        box-sizing: border-box;
+    }
+    
+
+    header{
+        position: absolute;
+        background-color: rgba(32,32,32,0);
+        width: 100%;
+        height: 95px;
+        z-index: 999;
+    }
+
+    #nav{
+        position: relative;
+        display: flex;
+        justify-content: space-between; 
+        width: 100%;
+        z-index: 998;
+        height: 95px;
+    }
+    
+    #project-chose-button{
+        display: none;
+    }
+
+    #group{
+        display: none;
+    }
+    
+    nav a img {
+        width: 125px;
+        height: 89.9px;
+        top: 5px;
+        left: 5px;      
+        position: absolute;
+        background-color: transparent;
+    }
+    
+    .choose{
+        display: none;
+    }
+
+    #hamber-button{
+        width: 80px;
+        height: 80px;
+        top: 0px;
+        right: 10%;
+        position: relative;
+        z-index: 999;
+        display: block;
+    }
+
+    #hamber{
+        display: none; /* 初始設置為隱藏 */
+        position: absolute;
+        width: 100%; /* 對齊內容到右側 */      
+    }
+
+    #hamber ul{
+        width: 175px;
+        height: 600px;
+        top: -95px;
+        right: 0;
+        position: absolute;
+        background: rgba(56, 61, 69, 1);
+    }
+
+    #project-chose-button1 p{
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        width: Fixed (132px)px;
+        height: Fixed (40px)px;
+        top: 150px;
+        left: 41px;
+        position: absolute;
+    }
+    /* 修改位置，移除padding，增加flex */
+    #hamber-social{
+        top:196px;
+        position: absolute;
+        /* add */
+        display: flex;
+        width: 100%;
+        height: calc(100% - 35%);
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    #hamber ul img{
+        top: 104px;
+        display: block; /* 讓圖片作為塊級元素 */
+        background: #383D45; /* 背景顏色 */
+        /* padding-top: 40px; 頂部間距
+        padding-left: 57px; */
+        margin: 0; /* 移除圖片的外邊距 */ 
+    }
+
+#project1{
+    position: absolute;
+    width: 59.83vw;
+    height: 90vw;
+    top: 164px;
+    left: 20vw;    
+    z-index: 3;
+   transition: width 0.5s ease, height 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0s;
+}
+
+#project2{
+    position: absolute;
+    display: none;
+    width: 59.83vw;
+    height: 90vw;
+    top: 164px;
+    left: 20vw;    
+    z-index: 3;
+    transition: width 0.5s ease, height 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0s;
+}
+
+#project3{
+    position: absolute;
+    display: none;
+    width: 59.83vw;
+    height: 90vw;
+    top: 164px;
+    left: 20vw;    
+    z-index: 3;
+    transition: width 0.5s ease, height 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0s;
+}
+
+#project4{
+    position: absolute;
+    display: none;
+    width: 59.83vw;
+    height: 90vw;
+    top:164px;
+    left: 20vw;    
+    z-index: 3;
+    transition: width 0.5s ease, height 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0s;
+}
+
+#button-left{
+    position: absolute;
+    width: 16.67vw;
+    left: 0vw;
+    top: 362px;
+    z-index: 3;
+}
+
+#button-right{
+    position: absolute;
+    width: 16.67vw;
+    left: 83.33vw;
+    top: 362px;
+    z-index: 3;
+}
+
+#bar-left{
+    position: absolute;
+    top: 686px;
+    width: 30.17vw;
+    left: 6.15vw;
+}
+
+#bar-mid{
+    position: absolute;
+    top: 686px;
+    left: 34.36vw;
+    width: 30.65vw;
+}   
+
+#bar-right{
+    position: absolute;
+    top: 686px;
+    width: 30.17vw;
+    left: 63.33vw;
+}
+#chose p{
+color: #384250;
+text-align: center;
+font-family: "BoutiqueBitmap9x9 1.5";
+font-size: 3.5vw; /* 根據螢幕寬度調整字型大小 */
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+#p1 p{
+    top:691px;
+    left: 10vw;
+}
+
+#p2 p{
+    top:691px;
+    left: 38vw;
+}
+
+#p3 p{
+    top:691px;
+    left: 68vw;
+}
+
+#description1{
+    display: none;
+}
+}
